# usbmuxd

./: .gitignore  85-usbmuxd.rules  AUTHORS  CMakeLists.txt  FindUSB.cmake  Makefile  Makefile.am  NEWS  README  README.devel  README.md  Readme.txt  autogen.sh  client.c  client.h  configure.ac  device.c  device.h  iphone.c  iphone.h  iproxy.c  libusbmuxd.c  libusbmuxd.h  libusbmuxd.pc.in  libusbmuxd.vcxproj  libusbmuxd.vcxproj.filters  log.c  log.h  main.c  org.libimobiledevice.usbmuxd.metainfo.xml  sock_stuff.c  sock_stuff.h  testclient.c  usb-linux.c  usb.h  usbmux.c  usbmuxd-proto.h  usbmuxd.c  usbmuxd.h  usbmuxd.vcxproj  (+3 more)
.github/workflows/: build.yml
Modules/: CheckConstantExists.cmake  FindInotify.cmake  FindPLIST.cmake  FindUSB.cmake  VersionTag.cmake  cmake_uninstall.cmake.in  describe.sh
common/: utils.c  utils.h
contrib/: libusb-Fix-Zero-Length-Packet-issue.patch  libusb-New-flag-LIBUSB_TRANSFER_ZERO_PACKET.patch
daemon/: CMakeLists.txt  client.c  client.h  device.c  device.h  log.c  log.h  main.c  usb-linux.c  usb.h
docs/: Makefile.am  usbmuxd.1  usbmuxd.8
include/: usbmuxd-proto.h  usbmuxd.h
libusbmuxd/: CMakeLists.txt  libusbmuxd.c  sock_stuff.c  sock_stuff.h  usbmuxd-proto.h  usbmuxd.h
openrc/: Makefile.am  usbmuxd.in
patches/: libusb-add-zlp-flag.patch  valgrind-usbdevfs.patch
python-client/: sshproxy.py  tcprelay.py  usbmux.py
src/: Makefile.am  client.c  client.h  collection.c  collection.h  conf.c  conf.h  config_msc.c  config_msc.h  device.c  device.h  libusbmuxd.c  log.c  log.h  main.c  preflight.c  preflight.h  sock_stuff.c  sock_stuff.h  socket.c  socket.h  tcp.h  usb-linux.c  usb.c  usb.h  usb_win32.c  usb_win32.h  usbmux.c  usbmux.h  usbmuxd-proto.h  usbmuxd.h  utils.c  utils.h  winsock2-ext.h
stuff/: README  com.openssh.sftp.plist
systemd/: Makefile.am  usbmuxd.service.in
tools/: CMakeLists.txt  Makefile.am  iproxy.c
udev/: 39-usbmuxd.rules.in  85-usbmuxd.rules.in  CMakeLists.txt  Makefile.am
usbmuxd/: CMakeLists.txt  client.c  client.h  device.c  log.c  log.h  main.c  usb-linux.c  usb.h  utils.c  utils.h
xCode/usbmuxd.xcodeproj/: project.pbxproj
xCode/usbmuxd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xCode/usbmuxd.xcodeproj/project.xcworkspace/xcshareddata/: usbmuxd.xccheckout  usbmuxd.xcscmblueprint
xCode/usbmuxd.xcodeproj/project.xcworkspace/xcuserdata/olunx.xcuserdatad/: UserInterfaceState.xcuserstate
xCode/usbmuxd.xcodeproj/xcuserdata/olunx.xcuserdatad/xcschemes/: usbmuxd.xcscheme  xcschememanagement.plist
